  as the gubernator advertise address.
* Now MD5 sums the peer address key when using replicated hash. This ensures
  better key distribution when using domain names or ip address that are very
  similar. (gubernator-1, gubernator-2, etc...)
* Now defaults to `replicated-hash` if `GUBER_PEER_PICKER` is unset
* Added support for DataCenter fields when using etcd discovery

## [0.9.2] - 2020-10-23
### Change
* ETCD discovery now sets the IsOwner property when updating the peers list.

## [0.9.1] - 2020-10-19
### Change
* Fix GUBER_PEER_PICKER_HASH and GUBER_PEER_PICKER
* Now warns if GUBER_PEER_PICKER value is incorrect
* Now ignoring spaces between `key = value` in config file

## [0.9.0] - 2020-10-13
### Change
* Fix GUBER_MEMBERLIST_ADVERTISE_PORT value type
* Fixed race condition and updated tests for limit change
* Fix limit change not having effect until reset

## [0.8.0] - 2020-01-04
### Added
* Allow cache users to invalidate a ratelimit after a specific time
* Changing limit and duration before expire should now work correctly
* Added Behavior RESET_REMAINING to reset any hits recorded in the cache for the
  specified rate limit

## Changes
* TokenBucketItem is now provided when `OnChange()` is called instead of `RateLimitResp`
* Fixed a bug in global behaviour where it would return an error if the async
  update had not occured before the a second request is made. Now it acts like it
  owns the rate limit until the owning node sends an update
* Always include reset_time in leaky bucket responses
* Fixed subtle bug during shutdown where PeerClient passed into goroutine could
  be out of scope/changed when routine runs
* Behavior is now a flag, this should be a backward compatible change for
  anyone using GLOBAL or NO_BATCHING but will break anyone using
  DURATION_IS_GREGORIAN. Use `HasBehavior()` function to check for behavior
  flags.

## [0.7.1] - 2019-12-10
### Added
* Added `Loader` interface for only loading and saving at startup and shutdown